--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: My Test Blog
+title: My-Test-Blog
+date: 2018-06-21
 author: michaelmcgee
 email: mikeylikey@goodcontent.com
 description: > # this means to ignore newlines until "baseurl:"
